--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -88,13 +88,19 @@
   }
 }
 
-@media (max-width: 320px) {
-  .header-left .logo {
-    display: none;
+@media (max-width: 376px) {
+  .header-left {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: -10px;
   }
 
-  .header-search > input {
-    width: 70px;
-    margin-left: 0px;
+  .header-search {
+    margin-top: -20px;
   }
+
+  /* .header-search > input {
+    width: 100%;
+    margin-left: 0px;
+  } */
 }
