--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,12 @@
-#root {
-  max-width: 1300px;
-  margin: 0 auto;
-  padding: 2rem;
-}
-
 .App {
-  color: var(--text-color);
+  color: var(--desc);
+  background-color: var(--bg-color);
 }
 
-/* .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
+body {
+  background-color: var(--bg-color) !important;
+  color: var(--desc);
+  margin: 0;
+  padding: 0;
+  margin: 0;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-} */
-
-/* @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
