--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,7 +2,7 @@
   height: 100px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
-  background-color: #fff;
+  background-color: var(--bg-color-v2);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -21,7 +21,7 @@
 }
 
 .header-search {
-  background-color: #f3f3f3;
+  background-color: var(--bg-color);
   height: 68px;
   display: flex;
   align-items: center;
@@ -42,6 +42,12 @@
   line-height: 20px;
   white-space: pre-wrap;
   white-space: pre-line;
+  color: var(--headings-color);
+}
+
+.header-search > input::placeholder {
+  color: var(--desc);
+  opacity: 0.8;
 }
 
 @media (max-width: 768px) {
