--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,6 @@
 .header {
+  position: sticky;
+  top: 0;
   height: 100px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
@@ -8,6 +10,7 @@
   justify-content: space-between;
   padding-left: 40px;
   padding-right: 40px;
+  z-index: 200;
 }
 
 .header .logo {
