--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,6 @@
   top: 0;
   height: 100px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-  border-radius: 8px;
   background-color: var(--bg-color-v2);
   display: flex;
   align-items: center;
@@ -46,6 +45,7 @@
   white-space: pre-wrap;
   white-space: pre-line;
   color: var(--headings-color);
+  width: calc(50% - 40px);
 }
 
 .header-search > input::placeholder {
@@ -99,13 +99,9 @@
 
 @media (max-width: 376px) {
   .header-left {
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: flex-start;
-    margin-top: -10px;
-  }
-
-  .header-search {
-    margin-top: -20px;
+    margin-top: 12px;
   }
 
   /* .header-search > input {
